--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.0",
-    "@astrojs/tailwind": "^5.1.5",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
-    "astro": "^5.1.8",
-    "lucide-react": "^0.474.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "@astrojs/react": "4.2.0",
+    "@astrojs/tailwind": "6.0.0",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "astro": "5.2.5",
+    "lucide-react": "0.474.0",
+    "react": "19.0.0",
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "19.0.0",
+    "react-switch": "^7.1.0",
+    "styled-components": "^6.1.15",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
   }
 }
