--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "type": "module",
   "version": "0.0.1",
+  "license": "ISC",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
