--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "19.0.0",
     "react-switch": "^7.1.0",
     "styled-components": "^6.1.15",
+    "sweetalert2": "^11.16.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
