--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,20 +5,22 @@
   "license": "ISC",
   "scripts": {
     "dev": "astro dev",
+    "start": "node ./dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "4.2.0",
-    "@astrojs/tailwind": "6.0.0",
+    "@astrojs/node": "^9.1.3",
+    "@astrojs/react": "^4.2.3",
+    "@astrojs/tailwind": "^6.0.2",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
-    "astro": "5.2.5",
+    "astro": "^5.5.6",
     "lucide-react": "0.474.0",
-    "react": "19.0.0",
+    "react": "^19.1.0",
     "react-data-table-component": "^7.6.2",
-    "react-dom": "19.0.0",
+    "react-dom": "^19.1.0",
     "react-switch": "^7.1.0",
     "styled-components": "^6.1.15",
     "sweetalert2": "^11.16.0",
